# bank_operations_coursework

./: README  main.py  pyproject.toml
src/: function.py
tests/: test_function.py
